[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/Music_Light-Puzzles.ogg" type="AudioStream" id=4]
[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=6]
[ext_resource path="res://unity-ads-lib/unity_ads.gd" type="Script" id=7]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 219.144, 689.962 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 215.94, 674.803 )
offset = Vector2( 0, -200 )
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Screens" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="MusicFade" type="Tween" parent="."]

[node name="Admob" type="Node" parent="."]
script = ExtResource( 6 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-7934104401485861/4571327875"
interstitial_id = "ca-app-pub-7934104401485861/4651218922"
rewarded_id = "ca-app-pub-7934104401485861/8455297214"
rewarded_interstitial_id = "ca-app-pub-7934104401485861/1381655773"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="UnityAds" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="start_game" from="Screens" to="." method="new_game"]
[connection signal="banner_failed_to_load" from="Admob" to="." method="_on_Admob_banner_failed_to_load"]
[connection signal="banner_loaded" from="Admob" to="." method="_on_Admob_banner_loaded"]
[connection signal="initialization_complete" from="Admob" to="." method="_on_Admob_initialization_complete"]
[connection signal="interstitial_closed" from="Admob" to="." method="_on_Admob_interstitial_closed"]
[connection signal="interstitial_failed_to_load" from="Admob" to="." method="_on_Admob_interstitial_failed_to_load"]
[connection signal="interstitial_loaded" from="Admob" to="." method="_on_Admob_interstitial_loaded"]
[connection signal="rewarded_interstitial_ad_closed" from="Admob" to="." method="_on_Admob_rewarded_interstitial_ad_closed"]
[connection signal="rewarded_interstitial_ad_loaded" from="Admob" to="." method="_on_Admob_rewarded_interstitial_ad_loaded"]
[connection signal="rewarded_interstitial_ad_opened" from="Admob" to="." method="_on_Admob_rewarded_interstitial_ad_opened"]
[connection signal="user_earned_rewarded" from="Admob" to="." method="_on_Admob_user_earned_rewarded"]
[connection signal="initialization_completed" from="UnityAds" to="." method="_on_UnityAds_initialization_completed"]
[connection signal="rewarded_closed" from="UnityAds" to="." method="_on_UnityAds_rewarded_closed"]
[connection signal="rewarded_loaded" from="UnityAds" to="." method="_on_UnityAds_rewarded_loaded"]
